--- a/sticky-product-image-with-scorlling-product-details.html
+++ b/sticky-product-image-with-scorlling-product-details.html
@@ -50,7 +50,7 @@
     color: white;
 }
 .image {
-    height: 200px;
+    height: min-content;
     background: green;
     color: white;
     text-align: center;
